stuff and thing

--- a/SimTECH/SimTECH/Pages/Extra/Index.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Index.razor
@@ -18,7 +18,7 @@
         <MudItem xs="9">
             <MudStack Spacing="1" AlignItems="AlignItems.Stretch" Class="mud-height-full pa-0">
                 <MudPaper Class="pa-4 mud-height-full">
-                    <MudText Typo="Typo.h5">Data</MudText>
+                    <MudText Typo="Typo.h5" Class="gradient-indicator">Data</MudText>
                     <MudDivider />
 
                     <MudSpacer />
@@ -108,8 +108,8 @@
                         </MudText>
                     </div>
                     <div>
-                        <MudText Typo="Typo.subtitle1">A few organisations</MudText>
-                        <MudText Typo="Typo.body2">
+                        <MudText Typo="Typo.subtitle1" Class="gradient-indicator">A few organisations</MudText>
+                        <MudText Typo="Typo.body2" Class="gradient-indicator">
                             MudBlazor for the Blazor component framework and everything that came along with it.
                             <br />
                             Tabler Icons for some of the icons
