changes to screenshot-butt in standings

--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
@@ -8,8 +8,12 @@
             <MudText Typo="Typo.h5">World Constructors Championship @(OverviewModel.Season.Year)</MudText>
             <MudSpacer />
             <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
-                <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWccResultGraph" />
-                <ScreenshotButton TargetId="wcc-season-results" IsIconButton="true" Colour="Color.Tertiary" />
+                <MudButton StartIcon="@Icons.Material.Outlined.InsertChart"
+                           IconSize="Size.Small"
+                           OnClick="ShowWccResultGraph">
+                    Chart
+                </MudButton>
+                <ScreenshotButton TargetId="wcc-season-results" Colour="Color.Tertiary" />
             </MudButtonGroup>
         </MudStack>
     </ToolBarContent>
