--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
@@ -14,9 +14,13 @@
                 <MudDivider />
                 <MudSpacer />
                 <MudStack Row="true" Class="pa-0">
-                    <MudText Typo="Typo.body2">Currenly in status: @OverviewModel.Season.State.ToString()</MudText>
+                    <MudText Typo="Typo.body2">
+                        Currenly in status: @OverviewModel.Season.State.ToString()
+                    </MudText>
                     <MudSpacer />
-                    <MudText Typo="Typo.body2" Color="Color.Dark">Hello from the other side</MudText>
+                    <MudText Typo="Typo.body2" Color="Color.Dark">
+                        Hello from the other side
+                    </MudText>
                 </MudStack>
             </MudStack>
         </MudPaper>
@@ -95,7 +99,9 @@
 
                     @if (OverviewModel.Season.State == State.Active && HasContractsEnabled)
                     {
-                        <MudButton FullWidth="true" OnClick="ShowRemainingContractDurations">Contract durations</MudButton>
+                        <MudButton FullWidth="true" OnClick="ShowRemainingContractDurations">
+                            Contract durations
+                        </MudButton>
                     }
                 </MudButtonGroup>
             </MudStack>
@@ -116,8 +122,9 @@
                         @foreach (var raceClass in OverviewModel.Season.RaceClasses)
                         {
                             <MudRadio Value="@raceClass.Id"
-                                      Color="Color.Primary"
-                                      UnCheckedColor="Color.Default">@raceClass.Name</MudRadio>
+                                      Color="Color.Primary">
+                                      @raceClass.Name
+                            </MudRadio>
                         }
                     </MudRadioGroup>
                 }
