made a wee change

--- a/SimTECH/SimTECH/Pages/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Index.razor
@@ -80,13 +80,13 @@
             </TemplateColumn>
         </Columns>
         <PagerContent>
-            <MudDataGridPager T="Driver" />
+            <MudDataGridPager T="DriverListItem" />
         </PagerContent>
     </MudDataGrid>
 </MudContainer>
 
 @code {
-    private List<DriverListItem> Drivers { get; set; } = new();
+    private List<DriverListItem> Drivers { get; set; } = [];
 
     private bool showingArchived = false;
     private string _searchString;
