--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -671,6 +671,10 @@ th {
     display: none !important;
 }
 
+.mud-table-pagination-select .mud-input .mud-input-root {
+    min-width: 15px;
+}
+
 /* default blazor css elements */
 #blazor-error-ui {
     background: lightyellow;
