tu tu tu du, max verstappuh

--- a/SimTECH/SimTECH/Pages/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Index.razor
@@ -33,7 +33,7 @@
                            IconSize="Size.Small"
                            OnClick="ToggleDisplayArchived"
                            Class="btn-md">
-                    @(showingArchived ? "Active" : "Archive")
+                    @(showingArchived ? "Active" : "Archived")
                 </MudButton>
                 <MudButton StartIcon="@Icons.Material.Filled.Sync"
                            IconSize="Size.Small"
